k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-web
  namespace: proyecto-web
spec:
  selector:
    matchLabels:
      app: backend-web
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-web
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: backend-web
          image: localhost:5000/backend_web:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: proyecto-web
spec:
  type: ClusterIP
  selector:
    app: backend-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30001
