k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: proyecto-web
  labels:
    app: frontend-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
      - name: angular-container
        image: localhost:5000/frontend_web:latest  # imagen
        ports:
          - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: proyecto-web
spec:
  selector:
    app: frontend-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200  
  type: LoadBalancer
