k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: proyecto-web
spec:
  ingressClassName: nginx
  rules:
    - host:   # vacío por ahora (localhost)
      http:
        paths:
          - path: /api               # Prefijo para redirigir las solicitudes API al backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080        # El backend expone el puerto 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
